--- a/index.html
+++ b/index.html
@@ -1,81 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Benigno</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styleCur.css" </head>
-
+    <title>Codai</title>
+    <link rel="stylesheet" href="bootstrap.css">
+</head>
 <body>
-    <div class="container">
+    
+    <table class="table">
+        <tr>
+            <th>Nome</th>
+            <th>idade</th>
+        </tr>
+        <tr>
+            <td>Lauteria</td>
+            <td>63</td>
+        </tr>
+        <tr>
+            <td>Benigno</td>
+            <td>40</td>
+        </tr>
+        <tr>
+            <td>Bemivalda</td>
+            <td>11</td>
+        </tr>
 
-        <section id="Dados">
-            <div id="perfil-card" class="card-padding">
-                <div class="img-perfil-card">
-                    <img src="Imagens/IMG-20181211-WA0001.jpg" alt="Minha Foto" class="img-perfil">
-                </div>
-                <div>
-                    <h1>Benigno Fernandes Lopes</h1>
-                    <hr />
-                    <h4>DEVELOP</h4>
-                </div>
+        <tr>
+            <td>Bryant</td>
+            <td>5</td>
+        </tr>
 
+        <tr>
+            <td>Benicius</td>
+            <td>1</td>
+        </tr>
 
-            </div>
-            <div>
-
-                <div id="card-dados" class="card-padding">
-                    <h1>Olá</h1>
-                    <h4>Bem vindo ao meu Curriculum </h4>
-
-                    <p>Eu amo desenvolver software, porém, tenho me afastado dessa área, mas estou voltando!
-                        Eu amo minha familia, pois é fonte da minha força!
-
-                    </p>
-                    <p>
-                        porém, tenho me afastado dessa área, mas estou voltando!
-                        porém, tenho me afastado dessa área, mas estou voltando!
-                    </p>
-                </div>
-                <div>
-                    <a href="#" class="btn">Meus Projetos</a>
-                </div>
-            </div>
-
-
-        </section>
-
-        <section id "Contato">
-            <div>
-                <h4>Phone: </h4>
-                <p>(48) 9 9904-9779</p>
-
-            </div>
-
-            <div>
-                <h4>E-mail:</h4>
-                <p>
-                    benignofernandeslopes@gmail.com
-                </p>
-            </div>
-
-        </section>
-
-        <footer>
-
-            <div>
-                <small> Benigno Lopes Direitos reservados
-                    <a href="https://www.growdev.com.br/" target="_blank"> <br>Growdev </br> </a>
-                </small>
-            </div>
-
-        </footer>
-    </div>
-
-
+    </table>
+    <button type="button" class="btn btn-primary">Primary</button>
 </body>
-
 </html>
