Alteracao String nome.

--- a/Codai/index.html
+++ b/Codai/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">     
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -25,14 +25,14 @@
                         <img src="imagens/BennyLopes.jpg" alt=" Foto Perfil" class="card-image mx-auto d-block">
                     </div>
                     <div class="card-body">
-                        <h5 class="text-center card-title" id="nome-no-html">Benigno Ferandes Lopes</h5>
+                        <h5 class="text-center card-title" id="nome-no-html">Benigno Lopes</h5>
                         <hr class="hr">
                         <p class="text-center" id="cargo-no-html">
                             Desenvolvedor
                         </p>
                         <div class="botoes-card">
                             
-                            <button onclick="clickNoSobre()" class="btn mr-1" id="btn-sobre"> Sobre</button>
+                            <button onclick="clickNoSobre()" class="btn mr-1" id="btn-sobre">Sobre</button>
 
                             <button onclick=" clickNoProjetos()" class="btn ml-1" id="btn-projetos">Projetos</button>
                         </div>
